styles/style.css
/* ... */
#mmrpg .canvas_ability_details,
#mmrpg .canvas_item_details {
    text-indent: 0;
    left: 250px;
    right: 250px;
    top: 42px;
    background-color: rgba(41, 41, 41, 0.75);
    border: 2px solid rgba(255, 255, 255, 0.15);
    height: 42px;
    padding: 0 36px;
    width: 200px;
    border-radius: 5px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    z-index: 5100;
}
#canvas .canvas_ability_details .ability_icon,
#canvas .canvas_item_details .item_icon {
    top: 5px;
    left: 5px;
    width: 30px;
    height: 30px;
    border: 1px solid #000000;
    border-radius: 5px 0 0 5px;
    -moz-border-radius: 5px 0 0 5px;
    -webkit-border-radius: 5px 0 0 5px;
    background: #000000 none scroll no-repeat -5px -5px;
}
#canvas .canvas_ability_details .ability_icon_right,
#canvas .canvas_item_details .item_icon_right {
    left: auto;
    right: 5px;
    border-radius: 0 5px 5px 0;
    -moz-border-radius: 0 5px 5px 0;
    -webkit-border-radius: 0 5px 5px 0;
}
#canvas .canvas_ability_details .ability_name,
#canvas .canvas_item_details .item_name {
    text-indent: 0;
    color: #FFFFFF;
    font-size: 12px;
    font-weight: bold;
    text-align: center;
    margin: 5px 0;
    line-height: 30px;
    border-radius: 0;
    border: 1px solid #000000;
    background-color: #000000;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

body.mobileFlag_landscapeMode #battle .canvas_overlay_header,
body.windowFlag_landscapeMode #battle .canvas_overlay_header,
body.mobileFlag_landscapeMode #battle .canvas_overlay_footer,
body.windowFlag_landscapeMode #battle .canvas_overlay_footer {
    left: 2;
    right: 0px;
    border-radius: 0;
    -moz-border-radius: 0;
    -webkit-border-radius: 0;
}
body.windowFlag_landscapeMode #battle .canvas_overlay_footer {
    left: -130px;
    right: -127px;
    border-radius: 0 0 5px 5px;
    -moz-border-radius: 0 0 5px 5px;
    -webkit-border-radius: 0 0 5px 5px;
}

#events {
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: auto;
    height: auto;
    z-index: 9985;
    border-radius: 0.5em;
    -moz-border-radius: 0.5em;
    -webkit-border-radius: 0.5em;
    border: 2px solid #1A1A1A;
    background-color: rgba(0, 0, 0, 0.75);
}
#events.hidden {
    display: none;
}
#events .event_wrapper {
    position: absolute;
    top: 60px;
    left: 85px;
    right: auto;
    bottom: auto;
    height: auto;
    min-height: 300px;
    width: 600px;
    overflow: hidden;
    z-index: 9990;
    border-radius: 0.5em;
    -moz-border-radius: 0.5em;
    -webkit-border-radius: 0.5em;
    border: 2px solid #1A1A1A;
    background-color: #222222;
    background-image: -webkit-gradient(
            linear,
            left bottom,
            left top,
            color-stop(0.15, rgba(0, 0, 0, 0.05)),
            color-stop(0.75, rgba(255, 255, 255, 0.05))
    );
    background-image: -moz-linear-gradient(
            center bottom,
            rgba(0, 0, 0, 0.05) 15%,
            rgba(255, 255, 255, 0.05) 75%
    );
    text-shadow: 1px 1px 4px #333333;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
}
#events .event_container {
    padding: 10px;
}
#events .event_container p {
    font-size: 14px;
    line-height: 18px;
    text-align: justify;
    padding: 0 5px 5px;
}
#events .event_container p a {
    text-decoration: none;
    color: #FFFFFF;
    font-weight: bold;
}
#events #canvas,
#events #messages {
    width: auto;
    height: 150px;
    border: 2px solid #000000;
    border-radius: 0.5em;
    -moz-border-radius: 0.5em;
    -webkit-border-radius: 0.5em;
    overflow: auto;
}
#events #canvas {
    overflow: hidden;
    margin: 0 0 5px;
    background-color: rgb(13,13,13);
    background-color: rgba(13,13,13,0.85);
    background-image: -webkit-gradient(
            linear,
            left bottom,
            left top,
            color-stop(0.15, rgba(13,13,13,0.75)),
            color-stop(0.75, rgba(09,09,09,0.75))
    );
    background-image: -moz-linear-gradient(
            center bottom,
            rgba(13,13,13,0.75) 15%,
            rgba(09,09,09,0.75) 75%
    );
}
#events #messages {
    margin: 5px 0 0;
    border: 0 none transparent !important;
    color: #FFFFFF;
    margin-right: -30px;
    padding-right: 15px;
    width: 576px;
    height: auto;
    max-height: 290px;
}
#events #buttons {
    margin: 10px 0 0;
    border: 0 none transparent !important;
    color: #FFFFFF;
}
#events #messages .player_type,
#events #messages .robot_type,
#events #messages .ability_type,
#events #messages .item_type,
#events #messages .field_type {
    padding: 0 6px;
    border-radius: 0.3em;
    -moz-border-radius: 0.3em;
    -webkit-border-radius: 0.3em;
    white-space: nowrap;
    font-weight: normal;
}


#events #messages .event {
    margin: 3px 8px;
    min-height: 55px;
    text-align: left;
    veritcal-align: top;
    padding: 2px;
    font-size: 10px;
    line-height: 13px;
    position: relative;
    margin-bottom: 8px !important;
}
#events #messages .event:first-child {
    margin-top: 0;
}
#events #messages .event_double {
    min-height: 120px;
}
#events #messages .event_triple {
    min-height: 184px;
}
/* ... */

